Added my Github page link to the bottom of main index page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <body>
         <header><strong>Odin Project Recipes Main Page</strong></header>
         <ul>
-            <li><a href="./cuban_ropa_vieja.html" target="blank" rel="noopener noreferer"><em>Cuban Ropa Vieja</em></li>
-
-            <li><a href="./buffalo_chicken_sandwiches.html" target="blank" rel="noopener noreferer"><em>Slow Cooker Buffalo Chicken Sandwiches</em></li>
-            <li><a href="./chocolate_chip_coffee_cake.html" target="blank" rel="noopener noreferer"><em>Chocolate Chip Coffee Cake</em></li>
+            <li><a href="./cuban_ropa_vieja.html" target="blank" rel="noopener noreferer"><em>Cuban Ropa Vieja</em></a></li>
+            <li><a href="./buffalo_chicken_sandwiches.html" target="blank" rel="noopener noreferer"><em>Slow Cooker Buffalo Chicken Sandwiches</em></a></li>
+            <li><a href="./chocolate_chip_coffee_cake.html" target="blank" rel="noopener noreferer"><em>Chocolate Chip Coffee Cake</em></a></li>
         </ul>
+        <a href = "https://github.com/BPanoramic56" target = "blank" rel = "noopener noreferer">My Github Page <em>[BPanoramic56]</em></a>
     </body>
 </html>
