--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
         <title>Odin Project Recipes Project</title>
     </head>
     <body>
-        <header><strong>Odin Project Recipes Main Page</strong></header>
+        <header class="header_title"><strong>Odin Project Recipes Main Page</strong></header>
         <ul>
-            <li><a href="./cuban_ropa_vieja.html" target="blank" rel="noopener noreferer"><em>Cuban Ropa Vieja</em></a></li>
-            <li><a href="./buffalo_chicken_sandwiches.html" target="blank" rel="noopener noreferer"><em>Slow Cooker Buffalo Chicken Sandwiches</em></a></li>
-            <li><a href="./chocolate_chip_coffee_cake.html" target="blank" rel="noopener noreferer"><em>Chocolate Chip Coffee Cake</em></a></li>
+            <li class="recipe_list"><a href="./cuban_ropa_vieja.html" rel="noopener noreferer"><em>Cuban Ropa Vieja</em></a></li>
+            <li class="recipe_list"><a href="./buffalo_chicken_sandwiches.html" rel="noopener noreferer"><em>Slow Cooker Buffalo Chicken Sandwiches</em></a></li>
+            <li class="recipe_list"><a href="./chocolate_chip_coffee_cake.html" rel="noopener noreferer"><em>Chocolate Chip Coffee Cake</em></a></li>
         </ul>
-        <a href = "https://github.com/BPanoramic56" target = "blank" rel = "noopener noreferer">My Github Page <em>[BPanoramic56]</em></a>
+        <div class = right>
+            <a href="https://github.com/BPanoramic56" target="blank" rel = "noopener noreferer">My Github Page <em>[BPanoramic56]</em></a>
+        </div>
     </body>
 </html>
