Added styles to the page and it's elements, currently working on the image hover effect. Currently the animation expands the image as to focus on it, trying to make it so the images change every couple of seconds if the user stays hovering on top of it

--- a/buffalo_chicken_sandwiches.html
+++ b/buffalo_chicken_sandwiches.html
@@ -6,15 +6,17 @@
         <title>Slow Cooker Buffalo Chicken Sandwiches</title>
     </head>
     <body>
-        <header><h2>The Odin Project Recipes: <em>Slow Cooker Buffalo Chicken Sandwiches</em></h2></header>
+        <header><h2>The Odin Project Recipes:<br><em>Slow Cooker Buffalo Chicken Sandwiches</em></h2></header>
         <img src="/Users/brunogomespascotto/Downloads/1113368-slow-cooker-buffalo-chicken-sandwiches-ReneePaj-1x1-1-f1ab4c11111343f7b88ddbfd9df88771.jpg" alt = "Slow Cooker Buffalo Chicken Sandwiches" class="recipe_image">
-        <h4>Recipe Time and Serving:</h4>
-        <p>
-            <h5 class="paragraph_spacing">Prep time: 10 mins</h5>
-            <h5 class="paragraph_spacing">Cook Time: 6 hrs</h5>
-            <h5 class="paragraph_spacing">Total Time: 6 hrs 10 mins</h5>
-            <h5 class="paragraph_spacing">Servings: 6 - 6 Sandwiches</h5>
-        </p>
+        <div class="recipe_time">
+            <h4>Recipe Time and Serving:</h4>
+            <p>
+                <h5 class="paragraph_spacing">Prep time: 10 mins</h5>
+                <h5 class="paragraph_spacing">Cook Time: 6 hrs</h5>
+                <h5 class="paragraph_spacing">Total Time: 6 hrs 10 mins</h5>
+                <h5 class="paragraph_spacing">Servings: 6 - 6 Sandwiches</h5>
+            </p>
+        </div>
 
         <h4>Description:</h4>
             <p class="paragraph_spacing">A sandwich that typically consists of boneless, skinless chicken breast or thigh served between slices of bread, on a bun, or on a roll.</p>
