--- a/chocolate_chip_coffee_cake.html
+++ b/chocolate_chip_coffee_cake.html
@@ -6,15 +6,17 @@
         <title>Chocolate Chip Coffee Cake</title>
     </head>
     <body>
-        <header><h2>The Odin Project Recipes: <em>Chocolate Chip Coffee Cake</em></h2></header>
-        <img src="/Users/brunogomespascotto/Downloads/1009275-4e8eaadff2984ce58affb52224695734.jpg" alt = "Slow Cooker Buffalo Chicken Sandwiches" class="recipe_image">
-        <h4>Recipe Time and Serving:</h4>
-        <p>
-            <h5 class="paragraph_spacing">Prep time: 20 mins</h5>
-            <h5 class="paragraph_spacing">Cook Time: 50 mins</h5>
-            <h5 class="paragraph_spacing">Total Time: 1hr 40 mins</h5>
-            <h5 class="paragraph_spacing">Servings: 10, 1 9-inch cake</h5>
-        </p>
+        <header><h2>The Odin Project Recipes:<br><em>Chocolate Chip Coffee Cake</em></h2></header>
+        <img src="/Users/brunogomespascotto/Downloads/1009275-4e8eaadff2984ce58affb52224695734.jpg" alt = "Chocolate Chip Coffee Cake" class="recipe_image">
+        <div class="recipe_time">
+            <h4 class="recipe_time_title">Recipe Time and Serving:</h4>
+            <p>
+                <h5 class="paragraph_spacing">Prep time: 20 mins</h5>
+                <h5 class="paragraph_spacing">Cook Time: 50 mins</h5>
+                <h5 class="paragraph_spacing">Total Time: 1hr 40 mins</h5>
+                <h5 class="paragraph_spacing">Servings: 10, 1 9-inch cake</h5>
+            </p>
+        </div>
 
         <h4>Description:</h4>
             <p class="paragraph_spacing">A single layer cake with a sweet, cinnamon-infused flavor and streusel top made from flour, butter, and sugar</p>
