--- a/cuban_ropa_vieja.html
+++ b/cuban_ropa_vieja.html
@@ -6,15 +6,17 @@
         <title>Cuban Ropa Vieja</title>
     </head>
     <body>
-        <header><h2>The Odin Project Recipes: <em>Cuban Ropa Vieja</em></h2></header>
+        <header><h2>The Odin Project Recipes:<br><em>Cuban Ropa Vieja</em></h2></header>
         <img src="/Users/brunogomespascotto/Downloads/79301-cuban-ropa-vieja-3x4-158-copy-ce7957573a694078971bd6183179835d.jpg" alt = "Cuban Ropa Vieja Image" class="recipe_image">
+        <div class="recipe_time">
         <h4>Recipe Time and Serving:</h4>
-        <p>
-            <h5 class="paragraph_spacing">Prep time: 15 mins</h5>
-            <h5 class="paragraph_spacing">Cook Time: 4 hrs</h5>
-            <h5 class="paragraph_spacing">Total Time: 4hrs 15 mins</h5>
-            <h5 class="paragraph_spacing">Servings: 6</h5>
-        </p>
+            <p>
+                <h5 class="paragraph_spacing">Prep time: 15 mins</h5>
+                <h5 class="paragraph_spacing">Cook Time: 4 hrs</h5>
+                <h5 class="paragraph_spacing">Total Time: 4hrs 15 mins</h5>
+                <h5 class="paragraph_spacing">Servings: 6</h5>
+            </p>
+        </div>
 
         <h4>Description:</h4>
             <p class="paragraph_spacing">Ropa Vieja is a savory Cuban shredded beef stew made with bell peppers, onions, and olives in a rich and flavorful tomato-based sauce.</p>
