Animation now slides through multiple images of the dish using a keyframes animation

--- a/buffalo_chicken_sandwiches.html
+++ b/buffalo_chicken_sandwiches.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <header><h2>The Odin Project Recipes:<br><em>Slow Cooker Buffalo Chicken Sandwiches</em></h2></header>
-        <img src="/Users/brunogomespascotto/Downloads/1113368-slow-cooker-buffalo-chicken-sandwiches-ReneePaj-1x1-1-f1ab4c11111343f7b88ddbfd9df88771.jpg" alt = "Slow Cooker Buffalo Chicken Sandwiches" class="recipe_image">
+        <a class="outer">
+            <div class="inner" id="buffalo_chicken_sandwiches_image">
+            </div>
+        </a>
         <div class="recipe_time">
             <h4>Recipe Time and Serving:</h4>
             <p>
