--- a/chocolate_chip_coffee_cake.html
+++ b/chocolate_chip_coffee_cake.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <header><h2>The Odin Project Recipes:<br><em>Chocolate Chip Coffee Cake</em></h2></header>
-        <img src="/Users/brunogomespascotto/Downloads/1009275-4e8eaadff2984ce58affb52224695734.jpg" alt = "Chocolate Chip Coffee Cake" class="recipe_image">
+        <a class="outer">
+            <div class="inner" id="chocolate_chip_coffee_cake_image">
+            </div>
+        </a>
         <div class="recipe_time">
             <h4 class="recipe_time_title">Recipe Time and Serving:</h4>
             <p>
