--- a/cuban_ropa_vieja.html
+++ b/cuban_ropa_vieja.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <header><h2>The Odin Project Recipes:<br><em>Cuban Ropa Vieja</em></h2></header>
-        <img src="/Users/brunogomespascotto/Downloads/79301-cuban-ropa-vieja-3x4-158-copy-ce7957573a694078971bd6183179835d.jpg" alt = "Cuban Ropa Vieja Image" class="recipe_image">
+        <a class="outer">
+            <div class="inner" id="cuban_ropa_vieja_image">
+            </div>
+        </a>
         <div class="recipe_time">
         <h4>Recipe Time and Serving:</h4>
             <p>
