Created main page

--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Project Recipes Project</title>
+        <title>Panoramic56</title>
     </head>
     <body>
-        <header class="index_header"><strong>Odin Project Recipes Main Page</strong></header>
-        <ul>
-            <li class="recipe_list"><a href="./cuban_ropa_vieja.html" rel="noopener noreferer"><em>Cuban Ropa Vieja</em></a></li>
-            <li class="recipe_list"><a href="./buffalo_chicken_sandwiches.html" rel="noopener noreferer"><em>Slow Cooker Buffalo Chicken Sandwiches</em></a></li>
-            <li class="recipe_list"><a href="./chocolate_chip_coffee_cake.html" rel="noopener noreferer"><em>Chocolate Chip Coffee Cake</em></a></li>
-        </ul>
+        <header class="index_header"><strong>Panoramic56</strong></header>
         <div class=right>
             <a class="github_page" href="https://github.com/BPanoramic56" target="blank" rel = "noopener noreferer">My Github Page <em>[BPanoramic56]</em></a>
         </div>
