Created main page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <header class="index_header"><strong>Panoramic56</strong></header>
         <div class=right>
             <a class="github_page" href="https://github.com/BPanoramic56" target="blank" rel = "noopener noreferer">My Github Page <em>[BPanoramic56]</em></a>
+            <a class="github_page" href="./odin_project_recipes_main_page.html" target="blank" rel = "noopener noreferer">My Github Page <em>[BPanoramic56]</em></a>
         </div>
     </body>
 </html>
