--- a/odin_project_recipes_main_page.html
+++ b/odin_project_recipes_main_page.html
@@ -14,6 +14,7 @@
         </ul>
         <div class=right>
             <a class="github_page" href="https://github.com/BPanoramic56" target="blank" rel = "noopener noreferer">My Github Page <em>[BPanoramic56]</em></a>
+            <a class="main_page"   href="./index.html" target="blank" rel = "noopener noreferer">Main Panoramic56 Page</a>
         </div>
     </body>
 </html>
