--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     </head>
     <body>
         <header class="index_header"><strong>Panoramic56</strong></header>
-        <div class=right>
-            <a class="github_page" href="https://github.com/BPanoramic56" target="blank" rel = "noopener noreferer">My Github Page <em>[BPanoramic56]</em></a>
-            <a class="github_page" href="./odin_project_recipes_main_page.html" target="blank" rel = "noopener noreferer">My Github Page <em>[BPanoramic56]</em></a>
+        <div class = "links">
+            <div class = "github page">
+                <a class="github_page" href="https://github.com/BPanoramic56" target="blank" rel = "noopener noreferer">My Github Page<em>[BPanoramic56]</em></a>
+            </div>
+            <div class = "the_odin_project">
+                <a class="github_page" href="./odin_project_recipes_main_page.html" target="blank" rel = "noopener noreferer">Odin Recipes Project</a>
+            </div>
         </div>
     </body>
 </html>
