Added Odin Project and Github images

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <body>
         <header class="index_header"><strong>Panoramic56</strong></header>
         <div class = "links">
-            <div class = "github page">
-                <a class="github_page" href="https://github.com/BPanoramic56" target="blank" rel = "noopener noreferer">My Github Page<em>[BPanoramic56]</em></a>
+            <div class="github_link">
+                <a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel = "noopener noreferer">My Github Page<em>[BPanoramic56]</em></a>
+                <img src="docs/assets/images/Github-Symbol.png">
             </div>
-            <div class = "the_odin_project">
-                <a class="github_page" href="./odin_project_recipes_main_page.html" target="blank" rel = "noopener noreferer">Odin Recipes Project</a>
+            <div class="the_odin_project_link">
+                <a class="project_links" href="./odin_project_recipes_main_page.html" target="blank" rel = "noopener noreferer">Odin Recipes Project</a>
+                <img src="docs/assets/images/The_Odin_Project.png">
             </div>
         </div>
     </body>
