--- a/odin_project_recipes_main_page.html
+++ b/odin_project_recipes_main_page.html
@@ -13,7 +13,7 @@
             <li class="recipe_list"><a href="./chocolate_chip_coffee_cake.html" rel="noopener noreferer"><em>Chocolate Chip Coffee Cake</em></a></li>
         </ul>
         <div class=right>
-            <a class="github_page" href="https://github.com/BPanoramic56" target="blank" rel = "noopener noreferer">My Github Page <em>[BPanoramic56]</em></a>
+            <a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel = "noopener noreferer">My Github Page <em>[BPanoramic56]</em></a>
             <a class="main_page"   href="./index.html" target="blank" rel = "noopener noreferer">Main Panoramic56 Page</a>
         </div>
     </body>
