Messing with images and links

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="styles.css" />
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Panoramic56</title>
-    </head>
-    <body>
-        <header class="index_header"><strong>Panoramic56</strong></header>
-        <div class = "links">
-            <div class="github_link">
-                <a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel = "noopener noreferer">My Github Page<em>[BPanoramic56]</em></a>
-                <img src="docs/assets/images/GitHub-Symbol.png">
-            </div>
-            <div class="the_odin_project_link">
-                <a class="project_links" href="./odin_project_recipes_main_page.html" target="blank" rel = "noopener noreferer">Odin Recipes Project</a>
-                <img src="docs/assets/images/The-Odin-Project.png">
-            </div>
+<html lang="en"><head><link rel="stylesheet" type="text/css" href="styles.css">
+
+    
+    <meta charset="utf-8">
+    <title>Panoramic56</title>
+</head>
+<body>
+    <header class="index_header"><strong>Panoramic56</strong></header>
+    <div class="links">
+        <div class="link-image">
+            <a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel="noopener noreferer"><em>[BPanoramic56]</em></a>
+            <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Github-Symbol.jpg">
         </div>
-    </body>
-</html>
+        <div class="link-image">
+            <a class="project_links" href="./odin_project_recipes_main_page.html" target="blank" rel="noopener noreferer">Odin Recipes Project</a>
+            <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/The-Odin-Project-Symbol.jpg">
+        </div>
+    </div>
+
+</body></html>
