--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header class="index_header"><strong>Panoramic56</strong></header>
+    <h6 class="subheader">Ideas brought to code</h3>
     <div class="links">
         <div class="link-image">
             <a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel="noopener noreferer"><em>[BPanoramic56]</em></a>
