Messing with images and links

--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <title>Panoramic56</title>
 </head>
 <body>
+	<div class="header-subheader-combine">
     <header class="index_header"><strong>Panoramic56</strong></header>
-    <h6 class="subheader">Ideas brought to code</h3>
+    <h6 class="subheader">Ideas brought to code</h6>
+	</div>
     <div class="links">
         <div class="link-image">
-            <a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel="noopener noreferer"><em>[BPanoramic56]</em></a>
             <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Github-Symbol.jpg">
+            <a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel="noopener noreferer"><em>[BPanoramic56]</em></a>
         </div>
         <div class="link-image">
-            <a class="project_links" href="./odin_project_recipes_main_page.html" target="blank" rel="noopener noreferer">Odin Recipes Project</a>
             <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/The-Odin-Project-Symbol.jpg">
+            <a class="project_links" href="./odin_project_recipes_main_page.html" target="blank" rel="noopener noreferer">Odin Recipes Project</a>
         </div>
     </div>
+
 
 </body></html>
