Trying to fix superposition of image and text

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <div class="links">
         <div class="link-image">
             <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Github-Symbol.jpg">
-            <a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel="noopener noreferer"><em>[BPanoramic56]</em></a>
+            <a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel="noopener noreferer"></a>
         </div>
         <div class="link-image">
             <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/The-Odin-Project-Symbol.jpg">
-            <a class="project_links" href="./odin_project_recipes_main_page.html" target="blank" rel="noopener noreferer">Odin Recipes Project</a>
+            <a class="project_links" href="./odin_project_recipes_main_page.html" target="blank" rel="noopener noreferer"></a>
+            </div> 
+        <div class="link-image">
+            <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Linkedin-Symbol.jpg">
+            <a class="project_links" href="https://www.linkedin.com/in/bruno-gomes-pascotto-6640a5230" target="blank" rel="noopener noreferer"></a>
         </div>
     </div>
-
-
 </body></html>
