--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en"><head><link rel="stylesheet" type="text/css" href="styles.css">
-
-    
     <meta charset="utf-8">
     <title>Panoramic56</title>
 </head>
@@ -10,18 +8,24 @@
     <header class="index_header"><strong>Panoramic56</strong></header>
     <h6 class="subheader">Ideas brought to code</h6>
 	</div>
+<h2 class="Projects">Projects: </h2>
+  
+<div class="project-name-description"><h3>Degree Plans </h3><h6>[Some minor plans that I might pursue, with classes and degree requirements]</h6></div>
+
+
     <div class="links">
-        <div class="link-image">
+        <div class="link-image"><a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel="noopener noreferer">
             <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Github-Symbol.jpg">
-            <a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel="noopener noreferer"></a>
+            </a>
         </div>
-        <div class="link-image">
+        <div class="link-image"><a class="project_links" href="./odin_project_recipes_main_page.html" target="blank" rel="noopener noreferer">
             <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/The-Odin-Project-Symbol.jpg">
-            <a class="project_links" href="./odin_project_recipes_main_page.html" target="blank" rel="noopener noreferer"></a>
+            </a>
             </div> 
         <div class="link-image">
+<a class="project_links" href="https://www.linkedin.com/in/bruno-gomes-pascotto-6640a5230" target="blank" rel="noopener noreferer">
             <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Linkedin-Symbol.jpg">
-            <a class="project_links" href="https://www.linkedin.com/in/bruno-gomes-pascotto-6640a5230" target="blank" rel="noopener noreferer"></a>
+            </a>
         </div>
     </div>
 </body></html>
