--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div class="header-subheader-combine">
-    <header class="index_header"><strong>Panoramic56</strong></header>
+    <header class="index_header"><h5>Panoramic56</h5></header>
     <h6 class="subheader">Ideas brought to code</h6>
 	</div>
 <h2 class="Projects">Projects: </h2>
