modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
-<html lang="en"><head><link rel="stylesheet" type="text/css" href="styles.css">
-    <meta charset="utf-8">
-    <title>Panoramic56</title>
-</head>
-<body>
-	<div class="header-subheader-combine">
-    <header class="index_header"><h5>Panoramic56</h5></header>
-    <h6 class="subheader">Ideas brought to code</h6>
-	</div>
-<h2 class="Projects">Projects: </h2>
-  
-<div class="project-name-description"><h3>Degree Plans </h3><h6>[Some minor plans that I might pursue, with classes and degree requirements]</h6></div>
-
-
-    <div class="links">
-        <div class="link-image"><a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel="noopener noreferer">
-            <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Github-Symbol.jpg">
-            </a>
+<html lang="en">
+    <head><link rel="stylesheet" type="text/css" href="styles.css">
+        <meta charset="utf-8">
+        <title>Panoramic56</title>
+    </head>
+    <body>
+        <div class="header-subheader-combine">
+            <header class="index_header"><h5>Panoramic56</h5></header>
+            <h6 class="subheader">Ideas brought to code</h6>
         </div>
-        <div class="link-image"><a class="project_links" href="./odin_project_recipes_main_page.html" target="blank" rel="noopener noreferer">
-            <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/The-Odin-Project-Symbol.jpg">
-            </a>
+
+        <div class="master-projects-div">
+        <h2 class="Projects">Projects: </h2>
+    
+        <div class="project-name-description">
+            <h3>Degree Plans</h3>
+            <h6>[Some minor plans that I might pursue, with classes and degree requirements]</h6>
+        </div>  
+        
+        <div class="project-name-description">
+            <h3>Server</h3>
+            <h6>Website with links to my server, currently running on a Ubuntu Server instance</h6>
+        </div>
+
+        </div>
+
+        <div class="links">
+            <div class="link-image">
+                <a class="project_links" href="https://github.com/BPanoramic56" target="blank" rel="noopener noreferer">
+                    <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Github-Symbol.jpg">
+                </a>
+            </div>
+            <div class="link-image">
+                <a class="project_links" href="./odin_project_recipes_main_page.html" target="blank" rel="noopener noreferer">
+                    <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/The-Odin-Project-Symbol.jpg">
+                </a>
             </div> 
-        <div class="link-image">
-<a class="project_links" href="https://www.linkedin.com/in/bruno-gomes-pascotto-6640a5230" target="blank" rel="noopener noreferer">
-            <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Linkedin-Symbol.jpg">
-            </a>
+            <div class="link-image">
+                <a class="project_links" href="https://www.linkedin.com/in/bruno-gomes-pascotto-6640a5230" target="blank" rel="noopener noreferer">
+                    <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Linkedin-Symbol.jpg">
+                </a>
+            </div>
         </div>
-    </div>
-</body></html>
+        </body>
+    </html>
