Added Server page

--- a/index.html
+++ b/index.html
@@ -19,14 +19,9 @@
             </div>  
             
             <div class="project-name-description">
-                <h3><a class = "server-page-link" href="./odin_project_recipes_main_page.html"  target="blank" rel="noopener noreferer">Server</a></h3>
+                <h3><a class = "server-page-link" href="./server_page.html"  target="blank" rel="noopener noreferer">Server</a></h3>
                 <h6>Website with links to my server, currently running on a Ubuntu Server instance</h6>
             </div>
-
-            <div class="project-name-description">
-                <h3>Server</h3>
-                <!-- <h6>[Some minor plans that I might pursue, with classes and degree requirements]</h6> -->
-            </div>  
         </div>
 
         <div class="links">
