Updates to Server page

--- a/server_page.html
+++ b/server_page.html
@@ -11,12 +11,30 @@
         </div>
 
         <div>
-            <a class="project_links" href="http://10.120.56.30" target="blank" rel="noopener noreferer">Apache</a>
-            <a class="project_links" href="http://10.120.56.30:8084" target="blank" rel="noopener noreferer">Atheos</a>
-            <a class="project_links" href="http://10.120.56.30:9090" target="blank" rel="noopener noreferer">CockPit</a>
-            <a class="project_links" href="http://10.120.56.30:443" target="blank" rel="noopener noreferer">NextCloud</a>
-            <a class="project_links" href="http://10.120.56.30:9000" target="blank" rel="noopener noreferer">Portainer</a>
-            <a class="project_links" href="http://10.120.56.30:8080" target="blank" rel="noopener noreferer">Scrutiny</a>
+            <div class="server-links-div">
+                <div class="Apache-box">
+                    <a class="project_links" href="http://10.120.56.30" target="blank" rel="noopener noreferer">Apache</a>
+                </div>
+                <div class="Atheos-box">
+                    <a class="project_links" href="http://10.120.56.30:8084" target="blank" rel="noopener noreferer">Atheos</a>
+                    <h3>Atheos Web UI Interface</h3>
+                    <p>"A web-based IDE framework with a small footprint and minimal requirements, built on top of Codiad"</p>
+                </div>
+                <div class="CockPit-box">
+                    <a class="project_links" href="http://10.120.56.30:9090" target="blank" rel="noopener noreferer">CockPit</a>
+                    <h3>CockPit Web UI Interface</h3>
+                    <p>Server Management UI Interface</p>
+                </div>
+                <div class="Nextcloud-box">
+                    <a class="project_links" href="http://10.120.56.30:443" target="blank" rel="noopener noreferer">NextCloud</a>
+                </div>
+                <div class="Portainer-box">
+                    <a class="project_links" href="http://10.120.56.30:9000" target="blank" rel="noopener noreferer">Portainer</a>
+                </div>
+                <div class="Scrutiny-boc">
+                    <a class="project_links" href="http://10.120.56.30:8080" target="blank" rel="noopener noreferer">Scrutiny</a>
+                </div>
+            </div>
         </div>
 
     </body>
