Minor changes and updated README

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     </head>
     <body>
         <div class="header-subheader-combine">
-            <header class="index_header"><h5>Panoramic56</h5></header>
+            <header class="index_header"><h5>BPanoramic56</h5></header>
             <h6 class="subheader">Ideas brought to code</h6>
+        </div>
+
+        <div class="introduction-div">
+            <h3>Bruno, you forgot the <a class = "introduction-link" href=""  target="blank" rel="noopener noreferer">Introduction</a> again!</h3>
         </div>
 
         <div class="master-projects-div">
@@ -20,7 +24,7 @@
             
             <div class="project-name-description">
                 <h3><a class = "server-page-link" href="./server_page.html"  target="blank" rel="noopener noreferer">Server</a></h3>
-                <h6>Website with links to my server, currently running on a Ubuntu Server instance</h6>
+                <h6>Website with links to my server, currently running on a Ubuntu instance in an old computer</h6>
             </div>
         </div>
 
