--- a/server_page.html
+++ b/server_page.html
@@ -16,21 +16,21 @@
                     <a class="project_links" href="http://10.120.56.30" target="blank" rel="noopener noreferer">Apache</a>
                 </div>
                 <div class="Atheos-box">
-                    <h3><a class="project_links" href="http://10.120.56.30:8084" target="blank" rel="noopener noreferer">Atheos</a>Atheos Web UI Interface</h3>
+                    <h4><a class="project_links" href="http://10.120.56.30:8084" target="blank" rel="noopener noreferer">Atheos</a> - Atheos Web UI Interface</h4>
                     <p>"A web-based IDE framework with a small footprint and minimal requirements, built on top of Codiad"</p>
                 </div>
                 <div class="CockPit-box">
-                    <h3><a class="project_links" href="http://10.120.56.30:9090" target="blank" rel="noopener noreferer">CockPit</a>CockPit Web UI Interface</h3>
+                    <h4><a class="project_links" href="http://10.120.56.30:9090" target="blank" rel="noopener noreferer">CockPit</a> - CockPit Web UI Interface</h4>
                     <p>Server Management UI Interface</p>
                 </div>
                 <div class="Nextcloud-box">
-                    <h3><a class="project_links" href="http://10.120.56.30:443" target="blank" rel="noopener noreferer">NextCloud</a>Nectloud Web UI Main Page</h3>
+                    <h4><a class="project_links" href="http://10.120.56.30:443" target="blank" rel="noopener noreferer">NextCloud</a> - Nextloud Web UI Main Page</h4>
                 </div>
                 <div class="Portainer-box">
-                    <h3><a class="project_links" href="http://10.120.56.30:9000" target="blank" rel="noopener noreferer">Portainer</a>Portainer Web UI Main Page</h3>
+                    <h4><a class="project_links" href="http://10.120.56.30:9000" target="blank" rel="noopener noreferer">Portainer</a> - Portainer Web UI Main Page</h4>
                 </div>
                 <div class="Scrutiny-boc">
-                    <h3><a class="project_links" href="http://10.120.56.30:8080" target="blank" rel="noopener noreferer">Scrutiny</a>Scrutiny Main Page (Not completely set up yet)</h3>
+                    <h4><a class="project_links" href="http://10.120.56.30:8080" target="blank" rel="noopener noreferer">Scrutiny</a> - Scrutiny Main Page (Not completely set up yet)</h4>
                 </div>
             </div>
         </div>
