Added the Diagrams page and tried embbebing the CS3500 diagram

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2 class="Projects">Projects: </h2>
     
         <div class="project-name-description">
-            <h3>Degree Plans</h3>
+            <h3><a class="server-page-link" href="plan_graphs.html" target="blank" rel="noopener noreferer">Degree Plans</a></h3>
             <h6>[Some minor plans that I might pursue, with classes and degree requirements]</h6>
         </div>  
         
@@ -39,6 +39,11 @@
             </a>
         </div> 
         <div class="link-image">
+            <a class="project_links" href="https://www.linkedin.com/in/bruno-gomes-pascotto-6640a5230" target="blank" rel="noopener noreferer">
+                <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Linkedin-Symbol.jpg">
+            </a>
+        </div>
+        <div class="CodeWars-image">
             <a class="project_links" href="https://www.linkedin.com/in/bruno-gomes-pascotto-6640a5230" target="blank" rel="noopener noreferer">
                 <img src="https://raw.githubusercontent.com/BPanoramic56/odin-recipes/main/docs/assets/images/Linkedin-Symbol.jpg">
             </a>
