--- a/plan_graphs.html
+++ b/plan_graphs.html
@@ -7,7 +7,7 @@
 <body>
     <div class = "CS3500Chart">
         <div class = "ChartHeader">
-            <h3>Chart Representing the CS3500 Projects, currently only containing the Spreadsheet Project</h3>
+            <h3>Chart Representing the CS3500 Projects, currently only containing the Spreadsheet Project (2)</h3>
             <object data="https://github.com/BPanoramic56/DegreePlan/blob/main/embed.txt" type="text/plain" width="500" style="height: 300px">
                 <a href="https://github.com/BPanoramic56/DegreePlan/blob/main/embed.txt">No Support?</a>
             </object>
