Changed to IFrame embeding and that seems to work better - Added nuclear engineering graph

--- a/plan_graphs.html
+++ b/plan_graphs.html
@@ -5,15 +5,15 @@
 </head>
 
 <body>
-    <div class = "CS3500Chart">
-        <div class = "ChartHeader">
+    <div class="CS3500Chart">
+        <div class="ChartHeader">
             <h3>Chart Representing the CS3500 Projects, currently only containing the Spreadsheet Project</h3>
-            <object data="https://github.com/BPanoramic56/DegreePlan/blob/main/embed.txt" type="text/plain" width="500" style="height: 300px">
-                <a href="https://github.com/BPanoramic56/DegreePlan/blob/main/embed.txt">No Support?</a>
-            </object>
-
+            <iframe frameborder="0" style="width:100%;height:2813px;" src="https://viewer.diagrams.net/?tags=%7B%7D&amp;highlight=0000ff&amp;edit=_blank&amp;layers=1&amp;nav=1&amp;title=CS3500Chart#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FBPanoramic56%2FDegreePlan%2Fmain%2FCS3500Chart"></iframe>ß
+        </div>
+        <div class="ChartHeader">
+            <h3>Chart Representing the Nuclear Engineering Minor, with it's main classes and pre-requisites</h3>
+            <iframe frameborder="0" style="width:100%;height:1428px;" src="https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=NuclearEngineeringMinor.drawio.html#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FBPanoramic56%2FDegreePlan%2Fmain%2FNuclearEngineeringMinor.drawio.html"></iframe>
         </div>
     </div>
 </body>
-
 </html>
