Changes to the index page styling (deleted double LinkedIn symbol) and degree plan

--- a/server_page.html
+++ b/server_page.html
@@ -29,7 +29,7 @@
                 <div class="Portainer-box">
                     <h4><a class="project_links" href="http://10.120.56.30:9000" target="blank" rel="noopener noreferer">Portainer</a> - Portainer Web UI Main Page</h4>
                 </div>
-                <div class="Scrutiny-boc">
+                <div class="Scrutiny-box">
                     <h4><a class="project_links" href="http://10.120.56.30:8080" target="blank" rel="noopener noreferer">Scrutiny</a> - Scrutiny Main Page (Not completely set up yet)</h4>
                 </div>
             </div>
