--- a/plan_graphs.html
+++ b/plan_graphs.html
@@ -8,11 +8,11 @@
     <div class = "CS3500Chart">
         <div class = "ChartHeader">
             <h3>Chart Representing the CS3500 Projects, currently only containing the Spreadsheet Project</h3>
-            <iframe frameborder="0" style="width:100%;height:2813px;" src="https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=CS3500Chart#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FBPanoramic56%2FDegreePlan%2Fmain%2FCS3500Chart"></iframe>
+            <iframe class = "DiagramIframe" frameborder="0" src="https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=CS3500Chart#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FBPanoramic56%2FDegreePlan%2Fmain%2FCS3500Chart"></iframe>
         </div>
         <div class = "ChartHeader">
             <h3>Chart Representing the Nuclear Engineering Minor, with it's requirements and pre-requisites</h3>
-            <iframe frameborder="0" style="width:100%;height:1428px;" src="https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=NuclearEngineeringMinor.drawio.html#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FBPanoramic56%2FDegreePlan%2Fmain%2FNuclearEngineeringMinor.drawio.html"></iframe>
+            <iframe class = "DiagramIframe" frameborder="0" src="https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=NuclearEngineeringMinor.drawio.html#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FBPanoramic56%2FDegreePlan%2Fmain%2FNuclearEngineeringMinor.drawio.html"></iframe>
         </div>
     </div>
 </body>
