Creates page cards

--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
     <h2 class="Projects">Projects: </h2>
     <div class="master-projects-div">
     
-        <div class="project-card">
-            <h3><a class="server-page-link" href="plan_graphs.html" target="blank" rel="noopener noreferer">Mental Charts</a></h3>
-            <h6>Some minor plans that I might pursue, with classes and degree requirements</h6>
+        <div class="project-card"><img src="docs/assets/images/DiagramSymbol.png">
+            <h3>Mental Charts</h3>
+            <h5>Some minor plans that I might pursue, with classes and degree requirements</h5><a href="plan_graphs.html" class="btn">Read More</a>
         </div>  
         
-        <div class="project-card">
-            <h3><a class="server-page-link" href="./server_page.html" target="blank" rel="noopener noreferer">Server</a></h3>
-            <h6>Website with links to my server, currently running on a Ubuntu instance in an old computer</h6>
-        </div>
+        <div class="project-card"><img src="docs/assets/images/ServerSymbol.png">
+<h3>Server</h3>            <h5>Website with links to my server, currently running on a Ubuntu instance in an old computer</h5>
+        <div class="btn"><a href="server_page.html" class="btna">Read More</a></div></div>
     </div>
 
     <div class="links">
@@ -43,5 +42,5 @@
             </a>
         </div>
     </div>
-</body>
-</html>
+
+</body></html>
