--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head><link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="utf-8">
     <title>Panoramic56</title>
- <link rel="icon" type="image/x-icon" href="docs/assets/images/Panoramic56.png">
+ <link rel="icon" type="image/x-icon" href="docs/assets/images/favicon.ico">
 </head>
 <body>
     <div class="header-subheader-combine">
